--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Your Title Goes Here</h1>
+    <h1>Survive the Zombies! </h1>
+    <p> Survive a Zompie attack as you scavange for weapons and materials. Gather ammmo and make your way to sucess.</p>
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
     <script src="final_project.js"></script>
