--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Survive the Zombies! </h1>
-    <p> Survive a Zompie attack as you scavange for weapons and materials. Gather ammmo and make your way to sucess.</p>
+    <h1>Dont touch the Fireballs! </h1>
+    <p> You are Mario in the fire galaxt and the main volcano just errupted. Whatever you do dont touch the fireballs!</p>
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
+    <button type="button" onclick="enemyMove()"> Play </button>
     <script src="final_project.js"></script>
   </body>
 </html>
