--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ a<!DOCTYPE html>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Dont touch the Fireballs! </h1>
-    <p> You are Mario in the fire galaxt and the main volcano just errupted. Whatever you do dont touch the fireballs!</p>
+    <h1>Dont touch the Fireballs!</h1>
+    <p> You are Mario in the fire galaxy and the main volcano just errupted. Whatever you do dont touch the fireballs!</p>
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
     <button type="button" onclick="enemyMove()"> Play </button>
